# bolt-ts

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
crates/ast/: Cargo.toml
crates/ast/src/: expr.rs  jsx.rs  keyword.rs  lib.rs  node.rs  node_flags.rs  pprint.rs  stmt.rs  token.rs  ty.rs  visitor.rs
crates/ast/src/trait/: accessor_like.rs  binary_like.rs  binding_name.rs  call_like.rs  class_like.rs  fn_like.rs  has_expr_init.rs  members_of_decl.rs  mod.rs  no_paren_rule.rs  object_lit_element_like.rs  rest_ty_like.rs  sig_decl_like.rs  signature_declaration.rs  var_like.rs
crates/binder/: Cargo.toml
crates/binder/src/: bind_break_or_continue.rs  bind_children.rs  bind_class_like.rs  bind_container.rs  bind_for_in_for_of.rs  bind_ret_or_throw.rs  bind_worker.rs  container_flags.rs  create.rs  errors.rs  flow.rs  flow_in_node.rs  lib.rs  merge.rs  parent_map.rs  pprint.rs  symbol.rs
crates/binder/src/node_query/: mod.rs
crates/checker/: Cargo.toml
crates/checker/src/: emit_resolver.rs  lib.rs
crates/checker/src/check/: assign.rs  check_bin_like.rs  check_call_like.rs  check_class_decl_like.rs  check_deferred.rs  check_expr.rs  check_expr_with_ty_args.rs  check_fn_like_decl.rs  check_fn_like_expr.rs  check_fn_like_symbol.rs  check_interface.rs  check_stmt.rs  check_ty.rs  check_ty_refer_ty_or_import.rs  check_type_related_to.rs  check_var_like.rs  create_ty.rs  cycle_check.rs  discriminant.rs  elaborate_error.rs  errors.rs  eval.rs  expect.rs  flow.rs  fn_mapper.rs  get_base_ty.rs  get_cond_ty_info.rs  get_context.rs  get_contextual.rs  get_declared_ty.rs  get_effective_node.rs  get_global.rs  get_iteration_tys.rs  get_mapped_ty_info.rs  get_sig.rs  get_simplified_ty.rs  get_symbol.rs  get_syntactic_semantics.rs  get_this_ty.rs  get_ty.rs  (+26 more)
crates/checker/src/trait/: mod.rs  var_like.rs
crates/checker/src/ty/: facts.rs  links.rs  mapper.rs  mod.rs  num_lit.rs  object_ty.rs  pprint.rs  sig.rs
crates/compiler/: Cargo.toml  a.js  build.rs
crates/compiler/benches/: bench.rs
crates/compiler/src/: atoms.rs  cli.rs  compiler_result.rs  diag.rs  ecma_refer.rs  emit_declaration.rs  errors.rs  index.rs  keyword.rs  lib.rs  main.rs  match_files.rs  path.rs  utils.rs
crates/compiler/src/ast/: expr.rs  mod.rs  node.rs  node_flags.rs  pprint.rs  stmt.rs  ty.rs  visitor.rs
crates/compiler/src/bind/: bind_break_or_continue.rs  bind_call_like.rs  bind_children.rs  bind_class_like.rs  bind_container.rs  bind_fn_like.rs  bind_for_in_for_of.rs  bind_prop_or_ele_access.rs  bind_ret_or_throw.rs  bind_visitor.rs  bind_worker.rs  container_flags.rs  create.rs  errors.rs  flow.rs  merge.rs  merged_symbol.rs  mod.rs  node_query.rs  parent_map.rs  pprint.rs  symbol.rs
crates/compiler/src/check/: assign.rs  check_bin_like.rs  check_call_like.rs  check_class_decl_like.rs  check_class_like_decl.rs  check_deferred.rs  check_expr.rs  check_expr_with_ty_args.rs  check_fn_like.rs  check_fn_like_decl.rs  check_fn_like_expr.rs  check_fn_like_symbol.rs  check_interface.rs  check_stmt.rs  check_ty.rs  check_ty_refer_ty_or_import.rs  check_type_related_to.rs  check_var_like.rs  compare_tys.rs  create_ty.rs  cycle_check.rs  elaborate_error.rs  errors.rs  expect.rs  flow.rs  fn_mapper.rs  get.rs  get_base_ty.rs  get_context.rs  get_contextual.rs  get_contextual_ty.rs  get_declared_ty.rs  get_effective_node.rs  get_mapped_ty_info.rs  get_sig.rs  get_simplified_ty.rs  get_symbol.rs  get_this_ty.rs  get_ty.rs  get_ty_from_array_ty_like.rs  (+28 more)
crates/compiler/src/early_resolve/: errors.rs  get_exports.rs  mod.rs  on_failed_value_resolve.rs  on_success_resolve.rs  resolve_call_like.rs  resolve_class_like.rs
crates/compiler/src/ecma_rules/: mod.rs
crates/compiler/src/emit/: emit_block_like.rs  emit_class_like.rs  expr.rs  helper.rs  mod.rs  stmt.rs  utils.rs
crates/compiler/src/graph/: errors.rs  (+1 more)
crates/compiler/tests/: api_test.rs  compiler_test.rs  run_tests.rs  test.d.ts
crates/early_resolve/: Cargo.toml
crates/early_resolve/src/: errors.rs  lib.rs  on_failed_value_resolve.rs  on_success_resolve.rs  resolve_call_like.rs  resolve_class_like.rs
crates/fs/: Cargo.toml
crates/fs/src/: errors.rs  lib.rs  memory.rs  path.rs  real.rs  tree.rs
crates/language_server/: Cargo.toml
crates/language_server/src/: editor_services.rs  lib.rs  main.rs  services.rs
crates/language_server/tests/: test_goto_implementation_enum.rs  test_white_space_trimming.rs  utils.rs
crates/module_graph/: Cargo.toml
crates/module_graph/src/: errors.rs  lib.rs
crates/module_resolve/: Cargo.toml
crates/module_resolve/src/: classic_name_resolver.rs  from_dir.rs  from_spec_node_modules_dir.rs  get_conditions.rs  get_node_resolution_features.rs  lib.rs  node_module_name_resolver.rs  normalize_join.rs  package_json.rs  resolution_cache.rs  resolution_kind_spec_loader.rs  semver.rs
crates/module_resolve/tests/: test_bundler_node_modules1.rs  test_dir.rs  test_exports.rs  test_extension.rs  test_node_modules.rs  test_not_found.rs  test_symlinks.rs  utils.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/optimize/: Cargo.toml
crates/optimize/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: check.rs  errors.rs  expr.rs  factory.rs  jsx.rs  lib.rs  list_ctx.rs  lookahead.rs  node_query.rs  nodes.rs  paren_rule.rs  parent_map.rs  parse_break_or_continue.rs  parse_class_like.rs  parse_fn_like.rs  parse_import_export_spec.rs  parse_modifiers.rs  parsed_map.rs  parsing_ctx.rs  pragmas.rs  query.rs  scan.rs  scan_integer.rs  scan_pragma.rs  state.rs  stmt.rs  touch.rs  ty.rs  unicode.rs  utils.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: errors.rs  from_dir.rs  from_spec_node_modules_dir.rs  lib.rs  normalize_join.rs  package_json.rs  parse_package_name.rs  resolution_kind_spec_loader.rs
crates/resolve/tests/: test_dir.rs  test_extension.rs  test_node_modules.rs  test_not_found.rs  utils.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  query.rs
crates/wasm/tests/: wasm_cases.rs  wasm_compile_test.rs
(+6845 files in other folders)
