[workspace]
resolver = "2"
members = [
  "crates/ast",
  "crates/binder",
  "crates/checker",
  "crates/compiler",
  "crates/config",
  "crates/early_resolve",
  "crates/ecma_logical",
  "crates/ecma_rules",
  "crates/libs",
  "crates/middle",
  "crates/module_graph",
  "crates/module_resolve",
  "crates/optimize",
  "crates/parser",
  "crates/path",
  "crates/tracing",
  "crates/wasm",

  "helper/arena",
  "helper/atom",
  "helper/diag-derive",
  "helper/errors",
  "helper/fs",
  "helper/span",
  "helper/utils",

  "tools/compile-test",
]

[workspace.dependencies]
rustc-hash = "2.1.0"
nohash-hasher = "0.2.0"
miette = { version = "7.1.0", features = ["fancy"] }
thin-vec = "0.2.13"
regex = { version = "1.10.2" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
enumflags2 = { version = "0.7.10" }
bitflags = "2.6.0"
paste = "1.0.15"
indexmap = "2.7.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
id-arena = "2.2.1"
tracing = "0.1.41"
rayon = "1.10.0"
