[workspace]
resolver = "2"
members = [
  "crates/ast",
  "crates/binder",
  "crates/checker",
  "crates/compiler",
  "crates/config",
  "crates/early_resolve",
  "crates/ecma_logical",
  "crates/ecma_rules",
  "crates/language_server",
  "crates/libs",
  "crates/middle",
  "crates/module_graph",
  "crates/module_resolve",
  "crates/optimize",
  "crates/parser",
  "crates/path",
  "crates/tracing",
  "crates/wasm",

  "helper/arena",
  "helper/atom",
  "helper/diag-derive",
  "helper/errors",
  "helper/fs",
  "helper/span",
  "helper/utils",

  "tools/compile-test",
]

[workspace.dependencies]
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
thin-vec = "0.2.14"
regex = { version = "1.11.1" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
enumflags2 = { version = "0.7.12" }
bitflags = "2.9.4"
paste = "1.0.15"
indexmap = "2.11.4"
tracing = "0.1.41"
rayon = "1.11.0"
