[workspace]
resolver = "2"
members = [
  "crates/ast",
  "crates/ast_factory",
  "crates/ast_visitor",
  "crates/binder_errors",
  "crates/binder",
  "crates/checker",
  "crates/checker_errors",
  "crates/compiler",
  "crates/config",
  "crates/early_resolve",
  "crates/early_resolve_errors",
  "crates/ecma_logical",
  "crates/ecma_rules",
  "crates/language_server",
  "crates/libs",
  "crates/middle",
  "crates/module_graph",
  "crates/module_resolve",
  "crates/napi",
  "crates/optimize",
  "crates/parser",
  "crates/parser_errors",
  "crates/path",
  "crates/semver",
  "crates/tracing",
  "crates/ty",
  "crates/wasm",
  "crates/wf_errors",

  "helper/arena",
  "helper/atom",
  "helper/diag_derive",
  "helper/errors",
  "helper/fs",
  "helper/query_system",
  "helper/query_system_macros",
  "helper/span",
  "helper/utils",

  "tools/bootstrap",
  "tools/build-github-ci",
  "tools/compile-test",
]

[workspace.dependencies]
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
thin-vec = "0.2.14"
regex = { version = "1.11.1" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
bitflags = "2.9.4"
paste = "1.0.15"
indexmap = "2.11.4"
tracing = "0.1.41"
rayon = "1.11.0"
expect-test = "1.5.1"
project-root = "0.2.2"
glob = "0.3.3"
thiserror = "2.0.18"
