[package]
name = "bolt_ts_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
bolt_ts_atom = { path = "../atom" }
bolt_ts_span = { path = "../span" }
bolt_ts_utils = { path = "../utils" }
enumflags2 = { workspace = true }
paste = { workspace = true }
nohash-hasher = "0.2.0"
