[package]
name = "bolt_ts_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
bolt_ts_atom = { path = "../../helper/atom" }
bolt_ts_span = { path = "../../helper/span" }
bolt_ts_utils = { path = "../../helper/utils" }
enumflags2 = { workspace = true }
nohash-hasher = { workspace = true }
rustc-hash = { workspace = true }
paste = { workspace = true }
