[package]
name = "bolt_ts_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
rustc-hash = { workspace = true }
nohash-hasher = "0.2.0"
bumpalo = { version = "3.16.0" }
bitflags = { workspace = true }
enumflags2 = { workspace = true }
bolt_ts_atom = { path = "../atom" }
bolt_ts_ast = { path = "../ast" }
bolt_ts_errors = { path = "../errors" }
bolt_ts_span = { path = "../span" }
bolt_ts_lib = { path = "../lib" }
bolt_ts_config = { path = "../config" }
bolt_ts_utils = { path = "../utils" }
bolt_ts_fs = { path = "../fs" }
bolt_ts_resolve = { path = "../resolve" }
project-root = "0.2.2"
thin-vec = { workspace = true }
stacker = "0.1"
include_dir = "0.7.3"
bumpalo-herd = "0.1.2"
paste = { workspace = true }
serde_json = { workspace = true }
normalize-path = { workspace = true }
indexmap = { workspace = true }
regex = "1.11.1"
pretty-duration = "0.1.1"

[dev-dependencies]
expect-test = "1.2.2"
compile-test = { path = "../compile-test" }
dir-test = "0.4.1"

[build-dependencies]
project-root = "0.2.2"
