[package]
name = "bolt_ts_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { workspace = true }
rustc-hash = { workspace = true }
nohash-hasher = "0.2.0"
bitflags = { workspace = true }
enumflags2 = { workspace = true }
bolt_ts_atom = { path = "../../helper/atom" }
bolt_ts_arena = { path = "../../helper/arena" }
bolt_ts_ast = { path = "../ast" }
bolt_ts_ecma_rules = { path = "../ecma_rules" }
bolt_ts_errors = { path = "../../helper/errors" }
bolt_ts_span = { path = "../../helper/span" }
bolt_ts_libs = { path = "../libs" }
bolt_ts_optimize = { path = "../optimize" }
bolt_ts_parser = { path = "../parser" }
bolt_ts_config = { path = "../config" }
bolt_ts_utils = { path = "../../helper/utils" }
bolt_ts_fs = { path = "../../helper/fs" }
bolt_ts_resolve = { path = "../resolve" }
bolt_ts_path = { path = "../path" }
bolt_ts_tracing = { path = "../tracing" }
project-root = "0.2.2"
thin-vec = { workspace = true }
stacker = "0.1"
include_dir = "0.7.3"
paste = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
pretty-duration = "0.1.1"
tracing = { workspace = true }
unicode-id-start = { version = "1.3.1" }

[dev-dependencies]
expect-test = "1.5.1"
compile-test = { path = "../../tools/compile-test" }
dir-test = "0.4.1"
git2 = "0.20.2"
divan = { package = "codspeed-divan-compat", version = "3.0.3" }

[build-dependencies]
project-root = "0.2.2"


[[bench]]
name = "bench"
harness = false
