[package]
name = "bolt_ts_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
normalize-path = { workspace = true }
bolt_ts_atom = { path = "../atom" }
bolt_ts_utils = { path = "../utils" }
rustc-hash = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
