[package]
name = "bolt_ts_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
bolt_ts_atom = { path = "../atom" }
bolt_ts_utils = { path = "../utils" }
bolt_ts_path = { path = "../path" }
nohash-hasher = "0.2.0"
rustc-hash = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
glob = "0.3.1"
