[package]
name = "bolt_ts_module_resolve"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = { workspace = true }
nohash-hasher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
bitflags = { workspace = true }
bolt_ts_atom = { path = "../../helper/atom" }
bolt_ts_config = { path = "../config" }
bolt_ts_fs = { path = "../../helper/fs" }
bolt_ts_utils = { path = "../../helper/utils" }
bolt_ts_path = { path = "../path" }
