[package]
name = "bolt_ts_optimize"
version = "0.1.0"
edition = "2024"

[dependencies]
bolt_ts_ast = { path = "../ast" }
bolt_ts_arena = { path = "../../helper/arena" }
bolt_ts_atom = { path = "../../helper/atom" }
bolt_ts_config = { path = "../config" }
bolt_ts_ecma_logical = { path = "../ecma_logical" }
bolt_ts_span = { path = "../../helper/span" }
bolt_ts_utils = { path = "../../helper/utils" }
paste = { workspace = true }
enumflags2 = { workspace = true }
rustc-hash = { workspace = true }
