[package]
name = "bolt_ts_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bolt_ts_atom = { path = "../atom" }
bolt_ts_config = { path = "../config" }
bolt_ts_compiler = { path = "../compiler" }
bolt_ts_errors = { path = "../errors" }
bolt_ts_fs = { path = "../fs" }
bolt_ts_lib = { path = "../lib" }
bolt_ts_span = { path = "../span" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde-wasm-bindgen = "0.6.5"
indexmap = { workspace = true, features = ["serde"] }
console_error_panic_hook = "0.1.7"
